Completed, Not COMPLITED

--- a/Client/src/assets/style.styl
+++ b/Client/src/assets/style.styl
@@ -1,2 +1,10 @@
+a
+  font-family Arial, Helvetica, sans-serif
+  text-decoration none
+  text-align center
+  color #666 !important
 
-formHeight = 80px
+.nav-link
+  font-weight 300
+  font-size 20px
+  margin-left 20px
